<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/action_map" />

    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/ic_guide"
        android:title="@string/acion_guide" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_store"
        android:title="@string/action_places" />

    <item
        android:id="@+id/navigation_warn"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/action_warn" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_scanner"
        android:title="@string/action_scanner" />

</menu>
