<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.giovannemobile.turismogo.fragments.WarningFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipToPadding="false"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_warning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/message_warning"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_select"
            android:entries="@array/array_services"
            android:padding="6dp"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etMyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_select"
                android:gravity="top"
                android:hint="@string/hint_where_r_u"
                android:imeOptions="actionNext"
                android:maxLength="@integer/description_max_length"
                android:maxLines="1"
                android:padding="5dp" />

            <ImageButton
                android:id="@+id/btMyLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_my_location" />
        </LinearLayout>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_select"
            android:gravity="top"
            android:hint="@string/hint_description"
            android:imeOptions="actionSend"
            android:lines="3"
            android:maxLength="@integer/description_max_length"
            android:maxLines="3"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/tvCharCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="0/0" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btSendWarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/rounded_button"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:text="Enviar alerta" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
